# penr-oz-redact-pii-tool

./: .gitignore  README.md  pyproject.toml
src/pii_redact/: __init__.py  cli.py  detector.py  ocr.py  patterns.py  redactor.py
tests/: test_redactor.py
