[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penr-oz-redact-pii-tool"
version = "0.1.0"
description = "Offline CLI tool to securely redact PII from PDFs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "derinworks" }
]
dependencies = [
  "pdf2image>=1.17.0",
  "Pillow>=10.0.0",
  "PyMuPDF>=1.24.0",
  "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
pii-redact = "pii_redact.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
